// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > snapshot: no props 1`] = `
<button
  class="ucl-uikit-button css-1q5jb4"
  data-testid="ucl-uikit-button"
/>
`;

exports[`Button > snapshot: testId prop 1`] = `
<button
  class="ucl-uikit-button css-1q5jb4"
  data-testid="test123"
/>
`;

exports[`Button > snapshot: variant prop 1`] = `
<button
  class="ucl-uikit-button css-an7wpu"
  data-testid="ucl-uikit-button"
/>
`;
